--- a/store/templates/navbar.html
+++ b/store/templates/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container px-4 px-lg-5">
-    <a class="navbar-brand" href="#!">Start Bootstrap</a>
+    <a class="navbar-brand" href="#!">NextGen - EShop</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -18,9 +18,30 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'home' %}"
-            >Home</a
+            >Home
+          </a>
+        </li>
+
+        {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'logout' %}"
+            >Logout</a
           >
         </li>
+        {% else %}
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="{% url 'login' %}"
+            >Login</a
+          >
+        </li>
+        {% endif %}
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
